Fix newsletter submit button on iOS

--- a/src/styles/sections/_s-doormat.sass
+++ b/src/styles/sections/_s-doormat.sass
@@ -7,14 +7,16 @@
     &__grid
         max-width: 500px
         margin: 0 auto
-        display: grid
-        grid-template-columns: 1fr 160px
 
-        .c-input
-            border-radius: 8px 0 0 8px
+        +tablet-desktop
+            display: grid
+            grid-template-columns: 1fr 160px
 
-        .c-button
-            height: 40px
-            padding: 0 20px
-            width: 100%
-            border-radius: 0 8px 8px 0
+            .c-input
+                border-radius: 8px 0 0 8px
+
+            .c-button
+                height: 40px
+                padding: 0 20px
+                width: 100%
+                border-radius: 0 8px 8px 0
